# assistant

./: .gitignore  EOS_code_doc_reconciliation_audit_2.md  EOS_code_doc_reconciliation_audit_2_addendum.md  README.md
EOS/: .gitignore  CREDENTIALS.md  EOS_PLAN.md  INSTALL.md  Launch EOS.bat  MODELS.md  POWER_USER_GUIDE.md  PROFILES.md  QUICK_START.md  README.md  Setup Full.bat  Setup-Full.ps1  Setup-Lite.ps1  Start Base Mode.bat  Start Base+Creativity Mode.bat  Start Base+Thinking Mode.bat  Start EOS.bat  Start Full Mode.bat  Start No-Boot Mode.bat  Start Vision Mode.bat  USER_GUIDE.md  WORLDVIEW_SPEC.md  config.base-creativity.json  config.base-thinking.json  config.base.json  config.full.json  config.hardened.json  config.json  config.standard.json  config.vision.json  directory_tree.txt  eos.py  launcher.ps1  pyproject.toml  pytest.ini  release_gate.py  requirements.txt  start-creativity-cpu.bat  start-creativity-gpu.bat  start-eos.bat  (+13 more)
EOS/AI personal files/: Discord.example.txt  google-oauth-client.example.json
EOS/core/: access_control.py  attention_preferences.py  audit.py  auth.py  autonomy.py  db_migrations.py  entity.py  google_oauth.py  identity.py  intent.py  memory.py  relational.py  secrets.py  worldview.py
EOS/data/: admin_token.txt  audit.db  session_continuity.json
EOS/docs/: CREDENTIALS.md  EOS_PLAN.md  EXTERNAL_INFERENCE.md  INSTALL.md  MODELS.md  POWER_USER_GUIDE.md  PROFILES.md  QUICK_START.md  SECURITY_GOOGLE_OAUTH_INCIDENT_RESPONSE.md  USER_GUIDE.md  WORLDVIEW_SPEC.md
EOS/interfaces/: discord_bot.py
EOS/launchers/: Launch EOS.bat  README.md  launcher.ps1  start-creativity-cpu.bat  start-creativity-gpu.bat  start-eos.bat  start-full.bat  start-main-cpu.bat  start-main-gpu.bat  start-minimal.bat  start-standard.bat  status-eos.bat  (+5 more)
(+193 files in other folders)
