[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eos"
version = "0.1.0"
description = "EOS — autonomous personal assistant runtime"
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = [
    # Core web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    # Memory & retrieval
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # Audio
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "faster-whisper>=1.0.0",
    # Vision / screen capture
    "mss>=9.0.1",
    "Pillow>=10.3.0",
    "opencv-python-headless>=4.9.0",
    # Discord
    "discord.py>=2.3.2",
    # Google Workspace
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.128.0",
    # Utilities
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "PyNaCl>=1.5.0",
    # Security & governance
    "keyring>=25.0.0",
    "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
eos = "eos:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "runtime*", "services*", "tools*", "interfaces*", "webui*"]
exclude = ["tests*", "models*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.html", "*.css", "*.js", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
